# MiniHumanoid_ROS2

./: README.md  can.sh  mot_setzero.sh
MotCtrl_Can/: CMakeLists.txt  package.xml
MotCtrl_Can/MotCtrl_Can/: CMakeLists.txt
MotCtrl_Can/MotCtrl_Can/launch/: MotCtrl.launch.py
MotCtrl_Can/MotCtrl_Can/src/: MotCtrl_node.cpp  MotCtrl_node.hpp  SocketCAN.hpp  dm_motor_driver.hpp
MotCtrl_Can/launch/: MotCtrl.launch.py
MotCtrl_Can/src/: MotCtrl_node.cpp  MotCtrl_node.hpp  dm_motor_driver.cpp  encos_motor_driver.cpp  encos_motor_driver.hpp  single_motor_ctrl_test.cpp  single_motor_ctrl_test.hpp
robot_control/robot_control/: CMakeLists.txt  package.xml
robot_control/robot_control/launch/: robot_control.launch.py
robot_control/robot_control/src/: robot_control.cpp  robot_control.hpp
